--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ pretty_urls:
 
 # DirectoryUTF+8
 source_dir: source
-public_dir: public
+public_dir: docs
 tag_dir: tags
 archive_dir: archives
 category_dir: categories
