--- a/source/_data/widgets.yml
+++ b/source/_data/widgets.yml
@@ -6,7 +6,7 @@ welcome:
     - '本站将收集、提供关于二人的最新消息，欢迎来稿 freexqjb@gmail.com '
     - '### [媒体报道](https://free-xueq-jianb.github.io/categories/%E5%AA%92%E4%BD%93%E6%8A%A5%E9%81%93/)'
     - '### [案件通报](https://free-xueq-jianb.github.io/categories/%E6%A1%88%E4%BB%B6%E9%80%9A%E6%8A%A5/)'
-    - '### [雪饼的朋友心声](https://free-xueq-jianb.github.io/categories/%E5%AA%92%E4%BD%93%E6%8A%A5%E9%81%93/)'
+    - '### [雪饼的朋友心声](https://free-xueq-jianb.github.io/categories/%E9%9B%AA%E9%A5%BC%E7%9A%84%E6%9C%8B%E5%8F%8B%E5%BF%83%E5%A3%B0/)'
     - '![](https://i.imgur.com/CM7Jdlt.jpg)'
 recent:
   layout: recent
