--- a/source/_data/widgets.yml
+++ b/source/_data/widgets.yml
@@ -3,10 +3,11 @@ welcome:
   title: '发生了什么？'
   content:
     - '独立记者黄雪琴、职业病权益倡导者王建兵于9月19日下午失联，目前未知身在何处。王建兵可能被以“煽动颠覆国家政权罪”拘留，主要原因或是他在家里和朋友的聚会。希望大家持续关注两人情况。'
-    - '本站将收集、提供关于二人的最新消息，欢迎来稿 freexuebing@protonmail.com '
-    - '### [媒体报道](https://free-xueq-jianb.github.io/categories/%E5%AA%92%E4%BD%93%E6%8A%A5%E9%81%93/)'
-    - '### [案件通报](https://free-xueq-jianb.github.io/categories/%E6%A1%88%E4%BB%B6%E9%80%9A%E6%8A%A5/)'
-    - '### [雪饼的朋友心声](https://free-xueq-jianb.github.io/categories/%E9%9B%AA%E9%A5%BC%E7%9A%84%E6%9C%8B%E5%8F%8B%E5%BF%83%E5%A3%B0/)'
+    - '联络：freexuebing@protonmail.com '
+    - '#### [案件通报](/categories/%E6%A1%88%E4%BB%B6%E9%80%9A%E6%8A%A5/)'
+    - '#### [媒体报道](/categories/%E5%AA%92%E4%BD%93%E6%8A%A5%E9%81%93/)'
+    - '#### [雪饼的朋友心声](/categories/%E9%9B%AA%E9%A5%BC%E7%9A%84%E6%9C%8B%E5%8F%8B%E5%BF%83%E5%A3%B0/)'
+    - '#### [声援雪饼图宣集](/pics/)'
     - '![](https://i.imgur.com/CM7Jdlt.jpg)'
 recent:
   layout: recent
