--- a/_config.yml
+++ b/_config.yml
@@ -114,6 +114,7 @@ inject:
   head:
     - <meta property="og:image" content="https://i.imgur.com/mguGXvv.jpg">
     - <meta name="google-site-verification" content="JTT-ApcJkrAGDSgcL8s5toLCBJt00ptmkxAzuu2tjWE" />
+    - <meta name="google-site-verification" content="6BTDC8Q3SLyQ1G7EKAeYoyM06GE4wPKsY66HIPAKDzo" />
     - <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 feed:
