--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -4,5 +4,5 @@ sidebar:
   menu:
     post: '[btn.blog](/)'
     wiki: '[雪饼简介](/self/)'
-    notes: '[事件综述](/links/)'
+    notes: '[事件](/links/)'
     images: '[图宣](/pics/)'
