--- a/source/_data/widgets.yml
+++ b/source/_data/widgets.yml
@@ -2,7 +2,7 @@ welcome:
   layout: markdown
   title: '发生了什么？'
   content:
-    - '独立记者黄雪琴、职业病权益倡导者王建兵于9月19日下午失联，目前疑遭警方指定居所监视居住。王建兵可能被以“煽动颠覆国家政权罪”拘留，主要原因或是他在家里和朋友的聚会。希望大家持续关注两人情况。'
+    - '独立记者黄雪琴、职业病权益倡导者王建兵于9月19日下午失联，目前疑遭警方指定居所监视居住。二人可能被以“煽动颠覆国家政权罪”拘留，原因与他在家里和朋友的聚会有关。希望大家持续关注两人情况。'
     - '联络：freexuebing@protonmail.com '
     - '#### [案件通报](/categories/%E6%A1%88%E4%BB%B6%E9%80%9A%E6%8A%A5/)'
     - '#### [媒体报道](/categories/%E5%AA%92%E4%BD%93%E6%8A%A5%E9%81%93/)'
