--- a/source/_data/widgets.yml
+++ b/source/_data/widgets.yml
@@ -2,6 +2,7 @@ welcome:
   layout: markdown
   content:
     - '<div id="clockdiv"><div>雪饼<br>消失</div><span class="days" id="day"></span><div id="smalltext">天</div></div>'
+    - '发生了什么？   '
     - '独立记者黄雪琴、职业病权益倡导者王建兵于9月19日下午失联，于10月27日被广州市公安局以涉嫌“煽动颠覆国家政权”的名义被执行逮捕，现拘留于广州市第一看守所。主要原因或是他在家里和朋友的聚会。律师已多次申请会见和取保候审，皆被警方拒绝。事件完整综述：[链接](https://freexqjb.netlify.app/links/)'
     - '联络：freexuebing@protonmail.com '
     - '#### [案件通报](/categories/%E6%A1%88%E4%BB%B6%E9%80%9A%E6%8A%A5/)'
